--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/challenge_fase3?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password: RubieBerilo@991003
+    password: tioerreensti
     hikari:
       read-only: true
   jpa:
@@ -15,9 +15,15 @@ spring:
     properties:
       hibernate.format_sql: true
       hibernate.jdbc.time_zone: America/Sao_Paulo
-
   graphql:
+    http:
+      path: /graphql
     graphiql:
       enabled: true
+      path: /graphiql
     schema:
       locations: classpath:graphql/
+security:
+  jwt:
+    secret: ${JWT_SECRET:AAABBBBBBBBBBBBBBBBBBCCDDASS}
+    expiration: ${JWT_EXPIRATION:3600000}
